--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ base58==2.1.1
 bitarray==2.5.1
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
-click @ file:///D:/bld/click_1651215332191/work
+click @ file:///D:/bld/click_1651215430313/work
 colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
 cytoolz==0.11.2
 eth-abi==2.1.1
@@ -24,21 +24,21 @@ googleapis-common-protos==1.56.2
 hexbytes==0.2.2
 httplib2==0.20.4
 idna==3.3
-importlib-metadata @ file:///D:/bld/importlib-metadata_1653252994979/work
+importlib-metadata @ file:///D:/bld/importlib-metadata_1653252997230/work
 ipfshttpclient==0.8.0a2
 itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1648147185463/work
 Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
 jsonschema==4.6.0
 jws==0.1.3
 lru-dict==1.1.7
-MarkupSafe @ file:///D:/bld/markupsafe_1648737731599/work
+MarkupSafe @ file:///D:/bld/markupsafe_1648737757460/work
 multiaddr==0.0.9
 multidict==6.0.2
 netaddr==0.8.0
 oauth2client==3.0.0
 parsimonious==0.8.1
 protobuf==3.20.1
-psycopg2 @ file:///D:/bld/psycopg2-split_1640944699338/work
+psycopg2==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycryptodome==3.14.1
